Add Highlights functionality
